--- a/rest-server/package.yaml
+++ b/rest-server/package.yaml
@@ -33,6 +33,7 @@ dependencies:
 - warp >=3.0 && <3.3
 - data-default
 - aeson >=0.6 && <1.3
+- aeson-casing
 - conduit >=1.0 && <2.0
 - monad-logger >=0.3 && <0.4
 - fast-logger >=2.2 && <2.5
@@ -45,6 +46,10 @@ dependencies:
 - time
 - case-insensitive
 - wai
+- casing
+- lens
+- lens-aeson
+- esqueleto
 
 # The library contains all of our application code. The executable
 # defined below is just a thin wrapper.
