--- a/rest-server/package.yaml
+++ b/rest-server/package.yaml
@@ -94,6 +94,7 @@ tests:
     - rest-server
     - hspec >=2.0.0
     - yesod-test
+    - utf8-string
 
 # Define flags used by "yesod devel" to make compilation faster
 flags:
