--- a/rest-server/config/test-settings.yml
+++ b/rest-server/config/test-settings.yml
@@ -7,6 +7,6 @@ database:
   #
   #   database: "_env:PGDATABASE:rest-server_test"
   database: meetup_test
-  port:     5433
+  port:     "_env:PGPORT:5433"
 
 auth-dummy-login: true
